<resources>
    <string name="app_name">Astan User</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_feedback">Feedback</string>
    <string name="menu_job">Job</string>
    <string name="menu_top">Top Kings</string>
    <string name="menu_meeting">Meeting</string>
    <string name="menu_book">Books</string>
    <string name="menu_Competition">Competition</string>
    <string name="menu_photo">Photo</string>
    <string name="menu_apk">New APK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
